[package]
name = "proxy-speedtest"
version = "0.1.0"
edition = "2021"

[dependencies]
palc = "0.0.2"
regex = "1.10"
reqwest = { version = "0.13.1", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
lto = true
strip = true
codegen-units = 4
opt-level = "z"
